<resources>
    <string name="app_name">Food Checker</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="meal_type">Meal Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_an_account_login">Already an account? Login</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign up</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="remember_me">Remember Me</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="original">Original</string>
    <string name="consistency">Consistency</string>
    <string name="grams">Grams</string>
    <string name="name">Name</string>
    <string name="save_to_favourites">Save to favourites</string>
    <string name="no_favourite_recipes">No Favourite Recipes</string>
</resources>