<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="authViewModel"
            type="com.metehan.foodchecker.viewmodels.AuthViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signupbkg"
        tools:context=".ui.auth.SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="150dp"
                android:padding="20dp">

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:id="@+id/signup_email"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_border"
                    android:padding="8dp"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:id="@+id/signup_password"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_border"
                    android:padding="8dp"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:id="@+id/signup_confirm_password"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_border"
                    android:padding="8dp"
                    android:hint="@string/confirm_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_up"
                    android:id="@+id/signup_button"
                    android:background="@drawable/custom_border_btn"
                    android:textSize="18sp"
                    app:cornerRadius="30dp" />

                <TextView
                    android:id="@+id/login_redirect_text"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:hint="@string/already_an_account_login"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>