<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="authViewModel"
            type="com.metehan.foodchecker.viewmodels.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbkg"
        tools:context=".ui.auth.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="250dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="350dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/custom_border"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="350dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/custom_border"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:padding="8dp"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/remember_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:layout_marginTop="16dp" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="350dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/custom_border_btn"
                        android:text="@string/login"
                        android:textSize="18sp"
                        app:cornerRadius="30dp" />

                    <TextView
                        android:id="@+id/sign_redirect_text"
                        android:layout_width="350dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:hint="@string/not_yet_registered_sign_up"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>