<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.metehan.foodchecker.ui.fragments.recipes.RecipesFragment"
        android:label="@string/recipes_fragment"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_recipesFragment_to_recipesBottomSheet"
            app:destination="@id/recipesBottomSheet" />
        <argument
            android:name="backFromBottomSheet"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_recipesFragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />

    </fragment>
    <fragment
        android:id="@+id/favoriteRecipes"
        android:name="com.metehan.foodchecker.ui.fragments.favorites.FavoriteRecipesFragment"
        android:label="@string/favorite_recipes_fragment"
        tools:layout="@layout/fragment_favorite_recipes" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.metehan.foodchecker.ui.fragments.foodjoke.FoodJokeFragment"
        android:label="@string/food_joke_fragment"
        tools:layout="@layout/fragment_food_joke" />
    <dialog
        android:id="@+id/recipesBottomSheet"
        android:name="com.metehan.foodchecker.ui.fragments.recipes.bottomsheet.RecipesBottomSheet"
        android:label="RecipesBottomSheet" >
        <action
            android:id="@+id/action_recipesBottomSheet_to_recipesFragment"
            app:destination="@id/recipesFragment" />
    </dialog>
    <activity
        android:id="@+id/detailsActivity"
        android:name="com.metehan.foodchecker.ui.DetailsActivity"
        android:label="details"
        tools:layout="@layout/activity_details" >
        <argument
            android:name="result"
            app:argType="com.metehan.foodchecker.models.Result" />
    </activity>

</navigation>